<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_black_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:fontFamily="sans-serif"
            android:lineHeight="25dp"
            android:text="Perfil do cliente"
            android:textColor="@color/black_text"
            android:textFontWeight="500"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_pen"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter"
            android:layout_marginEnd="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/layout_popular"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="55dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_header"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="NotSibling">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:fontFamily="sans-serif"
                android:lineHeight="25dp"
                android:text="@string/client_profile"
                android:textColor="@color/black_text"
                android:textFontWeight="500"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="sans-serif"
                android:lineHeight="25dp"
                android:text="@string/tv_header_1_name"
                android:textColor="@color/black_text"
                android:textFontWeight="500"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/et_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:hint="@string/tv_hint_floor_name"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="sans-serif"
                android:lineHeight="25dp"
                android:text="@string/tv_header_2_image_file"
                android:textColor="@color/black_text"
                android:textFontWeight="500"
                android:textSize="18sp" />
            <LinearLayout
                android:id="@+id/ll_image_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_pet_picture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/tv_add_image_file"
                    android:textColor="@color/grey_text"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/btn_add_image_file"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/default_button"
                    android:backgroundTint="@color/grey_button_background"
                    android:fontFamily="sans-serif"
                    android:lineHeight="19dp"
                    android:text="@string/btn_add_photo"
                    android:textAllCaps="false"
                    android:textColor="@color/black_text"
                    android:textFontWeight="500"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_image_dimensions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:lineHeight="25dp"
                        android:text="@string/tv_header_3_cpf"
                        android:textColor="@color/black_text"
                        android:textFontWeight="500"
                        android:textSize="18sp" />
                </LinearLayout>
                <EditText
                    android:id="@+id/et_client_social_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/tv_hint_cpf"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_floor_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:lineHeight="25dp"
                    android:text="@string/tv_header_4_data_nascimento"
                    android:textColor="@color/black_text"
                    android:textFontWeight="500"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"
                    android:hint="@string/tv_hint_data_nascimento"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:lineHeight="25dp"
                    android:text="@string/tv_header_5_email"
                    android:textColor="@color/black_text"
                    android:textFontWeight="500"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_client_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:hint="@string/tv_hint_email"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:lineHeight="25dp"
                    android:text="@string/tv_header_6_numero"
                    android:textColor="@color/black_text"
                    android:textFontWeight="500"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_client_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"
                    android:hint="@string/tv_hint_numero"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:lineHeight="25dp"
                    android:text="@string/tv_header_7_endereco"
                    android:textColor="@color/black_text"
                    android:textFontWeight="500"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_client_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:hint="@string/tv_hint_endereco"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:lineHeight="25dp"
                    android:text="@string/tv_header_8_endereco_numero"
                    android:textColor="@color/black_text"
                    android:textFontWeight="500"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_client_address_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"
                    android:hint="@string/tv_hint_endereco_numero"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:lineHeight="25dp"
                    android:text="@string/tv_header_9_endereco_numero"
                    android:textColor="@color/black_text"
                    android:textFontWeight="500"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_reference_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:hint="@string/tv_hint_ponto_referencia"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:lineHeight="25dp"
                    android:text="@string/tv_header_10_cep"
                    android:textColor="@color/black_text"
                    android:textFontWeight="500"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_client_cep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"
                    android:hint="@string/tv_hint_cep"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="sans-serif"
                    android:lineHeight="25dp"
                    android:text="@string/add_tv_login"
                    android:textColor="@color/black_text"
                    android:textFontWeight="500"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_client_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:hint="@string/tv_login"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="sans-serif"
                    android:lineHeight="25dp"
                    android:text="@string/add_tv_senha"
                    android:textColor="@color/black_text"
                    android:textFontWeight="500"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/et_client_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:hint="@string/add_tv_senha"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/btn_register_client"
                    android:layout_width="150dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/default_button"
                    android:backgroundTint="@color/blue_button_background"
                    android:fontFamily="sans-serif"
                    android:lineHeight="19dp"
                    android:text="Atualizar"
                    android:textColor="@color/white_text"
                    android:textFontWeight="500"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>