<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/fragmentAccess"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ic_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="sans-serif"
            android:lineHeight="25dp"
            android:text="@string/tv_title_access"
            android:textColor="@color/black_text"
            android:textFontWeight="500"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif"
            android:lineHeight="25dp"
            android:text="@string/tv_login"
            android:textColor="@color/black_text"
            android:textFontWeight="500"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/et_client_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:hint="@string/tv_login_hint"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:lineHeight="25dp"
            android:text="@string/tv_password"
            android:textColor="@color/black_text"
            android:textFontWeight="500"
            app:layout_constraintTop_toBottomOf="@+id/et_client_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/et_client_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:hint="@string/tv_password_hint"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_access_account"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_access"
            app:layout_constraintTop_toBottomOf="@+id/et_client_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_create_account"
            app:layout_constraintTop_toBottomOf="@+id/btn_access_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>