<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FragmentSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cc_profile_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/client_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/dog_cat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_client_profile"
            android:text="@string/client_profile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/options_shape"
            app:layout_constraintTop_toBottomOf="@+id/client_image"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_pet_profile"
            android:text="@string/pet_profile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/options_shape"
            app:layout_constraintTop_toBottomOf="@+id/btn_client_profile"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_payment"
            android:text="@string/payment"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/options_shape"
            app:layout_constraintTop_toBottomOf="@+id/btn_pet_profile"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_log_out"
            android:layout_marginBottom="8dp"
            android:layout_width="300dp"
            android:layout_marginTop="8dp"
            android:text="@string/log_out"
            android:background="@drawable/options_shape"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_payment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>